--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:VrVU0oHaOqCfssJxf/b1ta5vBI1y1Ghjc+Ya5oLPAmI=
-APP_DEBUG=true
-APP_URL=http://localhost
-ENV=dev
-SLACK=TH74P8D8E/BNYRD95TL/PSsMj6vuugwhsabb5zLX57X3
 
+text/x-generic .env ( ASCII text )
+APP_NAME=Laravel
+APP_ENV=production
+APP_KEY=base64:k9BZAyYVv7Cg4Qs81l9yfrLT2K3HWtgSS8kM5Qb1uos=
+APP_DEBUG=false
+APP_LOG_LEVEL=debug
+APP_URL=http://dev.tpslalom
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=nksdscom_roll_call
-DB_USERNAME=root
-DB_PASSWORD=1234
+DB_USERNAME=nksdscom_tps
+DB_PASSWORD=Po;=gAO[bX-h
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -45,3 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+GAME=4
+START_GAME=0
