--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=nksdscom_roll_call
-DB_USERNAME=nksdscom_tps
-DB_PASSWORD=Po;=gAO[bX-h
+DB_DATABASE=roll_call
+DB_USERNAME=root
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
